--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Deven Jain</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
                     <div class="image">
                         <img src="/avatar.jpg" alt="">
                     </div>
-                    <h2 class="name">Lorem Dola Ipsum</h2>
+                    <h2 class="name">Deven Jain</h2>
                     <p class="career">Software Engineer</p>
                 </div>
                 <div class="contact-info">
@@ -26,15 +26,15 @@
                     <ul>
                         <li>
                             <i class="fa fa-phone"></i>
-                            07661892982
+                            +91 98714 22650
                         </li>
                         <li>
                             <i class="fa fa-fax"></i>
-                            loremipsum@gmail.com
+                            devenjain2020@gmail.com
                         </li>
                         <li>
                             <i class="fa fa-globe"></i>
-                            www.loremipsum.com
+                            https://www.linkedin.com/in/deven-jain/
                         </li>
                         <li>
                             <i class="fa fa-facebook"></i>
@@ -42,11 +42,11 @@
                         </li>
                         <li>
                             <i class="fa fa-instagram"></i>
-                            @loremipsum
+                            <a href="https://www.instagram.com/thee.vein_jam21/" target="_blank">@thee.vein_jam21</a>
                         </li>
                         <li>
                             <i class="fa fa-map-marker"></i>
-                            37 Pramount St, London
+                            Gurgaon, Haryana
                         </li>
                     </ul>
                 </div>
@@ -117,11 +117,11 @@
                         <ul>
                             <li>
                                 <i class="fa fa-phone"></i>
-                                07661892982
+                                +91 98714 22650
                             </li>
                             <li>
                                 <i class="fa fa-fax"></i>
-                                loremipsum@gmail.com
+                                devenjain2020@gmail.com
                             </li>
                         </ul>
                     </div>
