--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Dropdown Menu with Search Box | CodingNepal</title>
+  <title>Deven Jain</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
@@ -16,7 +15,7 @@
       <input type="checkbox" id="show-menu">
       <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
       <div class="content">
-      <div class="logo"><a href="#">CodingNepal</a></div>
+      <div class="logo"><a href="#"><img src="DJ_Logo_1.png" alt="DevenJain" height="50" width="50"></a></div>
         <ul class="links">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -63,8 +62,8 @@
   </div>
 
   <div class="dummy-text">
-    <h2>Responsive Dropdown Menu Bar with Searchbox</h2>
-    <h2>using only HTML & CSS - Flexbox</h2>
+    <h2>Work in progress!</h2>
+    <h2>Website will be updated soon!</h2>
   </div>
 
 </body>
