added icon to title

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Deven Jain</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <link rel = "icon" href = "DJ_Logo_1.png" type = "image/x-icon">
 </head>
 <body>
   <div class="wrapper">
