--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <input type="checkbox" id="show-menu">
       <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
       <div class="content">
-      <div class="logo"><a href="#"><img src="DJ_Logo_1.png" alt="DevenJain" height="50" width="50"></a></div>
+      <div class="logo"><a href="https://devencodes.me"><img src="DJ_Logo_1.png" alt="DevenJain" height="50" width="50"></a></div>
         <ul class="links">
-          <li><a href="#">Home</a></li>
+          <li><a href="https://devencodes.me">Home</a></li>
           <li><a href="#">About</a></li>
           <li>
             <a href="#" class="desktop-link">Features</a>
@@ -61,8 +61,10 @@
       </form>
     </nav>
   </div>
-
   <div class="dummy-text">
+    <h2>Let's connect on LinkedIn!</h2>
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="deven-jain" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/deven-jain?trk=profile-badge">Deven Jain</a></div>
+    <hr>
     <h2>Work in progress!</h2>
     <h2>Website will be updated soon!</h2>
   </div>
